# rightsbox-cli

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dispatcher.cpp  Dispatcher.h  LICENSE  RBoxIOCPNotifs.cpp  RBoxMessage.h  RBoxRun.cpp  RBoxRun.h  README.md  README.zh-CN.md  build-all.bat  build-all.ps1  main.cpp
broker/: Broker.cpp  Broker.h  BrokerPolicy.cpp  BrokerPolicy.h  BrokerProtocol.h
hook/: RBoxHook.cpp  RBoxHook.h
inject/: RBoxInject.cpp
rightsbox/: Dispatcher.cpp  Dispatcher.h  RBoxIOCPNotifs.cpp  RBoxIOCPNotifs.h  RBoxInit.cpp  RBoxInit.h  RBoxMessage.cpp  RBoxRun.cpp  RBoxRun.h  main.cpp
runner/: RBoxRunner.cpp
utils/: OSVersionUtils.h  TokenUtils.cpp  TokenUtils.h
